1.18.2 (without mipmap)